# git_meta_info

./: .gitignore  LICENSE  README.md
scripts/: CMakeLists.txt  build_vc10.bat  git_meta_info.cmake.in  git_meta_info.h.in
src/: main_test.cpp
